# operationcode-pybot

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .mega-linter.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  .yamllint.yaml  CLAUDE_CODE_REVIEW.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.MD  MAINTAINERS.md  Makefile  Pipfile  Procfile  README.md  README.rst  base_bot_manifest.yml  bot_manifest.yml  build.sh  docker-build.sh  docker-compose.yml  fly.toml  logging.yml  main.py  manage.py  pyproject.toml  qa.sh  requirements.txt  requirements_dev.txt  setup.sh
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  megalinter.yml
Bot/: __init__.py  __main__.py  bot.py  daily_programmer_helper.py
docker/: Dockerfile  Dockerfile.test  Dockerfile.test.py312  Dockerfile.test.py314  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.weaviate.yml  docker-compose.yml  example.env
docs/: UPGRADE_ANALYSIS.md  UPGRADE_PLAN.md
lib/: util.sh
modules/airtable/: __init__.py  daily_programmer_table.py  mentorship_tables.py  message_text_table.py  scheduled_message_table.py  shared_table.py
modules/databases/: __init__.py  vector_database_config.py
modules/handlers/: channel_join_handler.py  daily_programmer.py  greeting_handler.py  mentorship_handler.py  report_handler.py
modules/models/: daily_programmer_models.py  greeting_models.py  mentorship_models.py  message_text_models.py  report_models.py  scheduled_message_models.py  shared_models.py
modules/models/slack_models/: action_models.py  command_models.py  event_models.py  message_models.py  shared_models.py  slack_models.py  view_models.py
modules/slack/blocks/: announcement_blocks.py  greeting_blocks.py  mentorship_blocks.py  new_join_blocks.py  report_blocks.py  shared_blocks.py
modules/utils/: __init__.py  daily_programmer_scheduler.py  message_scheduler.py  one_off_scripts.py  vector_delete_data.py  vector_ingestion.py  vector_search.py
modules/utils/example_requests/: mentorship_request_claim_action.json  pride_request_command.json  view_submission_request.json
modules/utils/example_responses/: view_open_response.json
pin-manager-bot/: README.rst  bot.py  daily_programmer_helper.py  qa.sh  requirements.txt
pyback/: __main__.py
pyback/endpoints/: __init__.py  apscheduler.py
pyback/endpoints/airtable/: __init__.py  messages.py  requests.py  utils.py
pyback/endpoints/slack/: __init__.py  actions.py  commands.py  events.py
pyback/endpoints/slack/utils/: __init__.py  (+3 more)
pyback/plugins/: __init__.py
pyback/plugins/airtable/: api.py  endpoints.py  plugin.py
pybot/: __init__.py  __main__.py  customLogging.py  logging.py  sentry.py
pybot/_vendor/: __init__.py
pybot/_vendor/sirbot/: LICENSE  __init__.py  bot.py
pybot/_vendor/slack/: LICENSE  __init__.py  actions.py  commands.py  events.py  exceptions.py  methods.py  sansio.py
pybot/endpoints/: __init__.py
pybot/endpoints/airtable/: messages.py  requests.py  utils.py
pybot/endpoints/api/: __init__.py  slack_api.py  utils.py
pybot/endpoints/slack/: __init__.py  actions.py  commands.py  events.py  messages.py
pybot/plugins/: __init__.py
pybot/plugins/airtable/: __init__.py  api.py  endpoints.py  plugin.py  requests.py
pybot/plugins/api/: __init__.py  endpoints.py  plugin.py  request.py
scripts/: test-py312.sh  test-py37.sh
tests/: conftest.py  event_data.py  test_event_parser.py  test_slack_actions.py  test_slack_events.py  test_upgrade_safety.py
tests/data/: __init__.py  actions.py  blocks.py  events.py
tests/endpoints/airtable/: __init__.py  test_airtable_webhook.py
tests/endpoints/api/: test_slack_api_endpoint.py
tests/endpoints/slack/: test_general_actions.py  test_mentor_request_flow.py  test_mentor_volunteer_flow.py  test_message_handlers.py  test_new_member_actions.py  test_report_actions.py  test_slack_actions.py  test_slack_events.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_airtable_read.py
tests/unit/: test_action_messages.py  test_airtable.py  test_high_severity_fixes.py  test_lunch_command.py  test_mentor_request_model.py  test_mentor_volunteer_model.py  test_roll_command.py  test_sentry_sampler.py
tests/unit/cassettes/: TestDailyProgrammerTableBasic.test_mentorship_affiliation_table_has_all_desired_fields.yaml  TestDailyProgrammerTableBasic.test_mentorship_affiliation_table_has_correct_number_of_fields.yaml  TestMentorTableBasic.test_mentor_table_has_all_desired_fields.yaml  TestMentorTableBasic.test_mentor_table_has_correct_number_of_fields.yaml  TestMentorshipAffiliationTableBasic.test_mentorship_affiliation_table_has_all_desired_fields.yaml  TestMentorshipAffiliationTableBasic.test_mentorship_affiliation_table_has_correct_number_of_fields.yaml  TestMentorshipRequestsTableBasic.test_mentorship_affiliation_table_has_all_desired_fields.yaml  TestMentorshipRequestsTableBasic.test_mentorship_affiliation_table_has_correct_number_of_fields.yaml  TestMentorshipServicesTableBasic.test_mentorship_services_table_has_all_desired_fields.yaml  TestMentorshipServicesTableBasic.test_mentorship_services_table_has_correct_number_of_fields.yaml  TestMentorshipSkillsetsTableBasic.test_mentorship_skillsets_table_has_all_desired_fields.yaml  TestMentorshipSkillsetsTableBasic.test_mentorship_skillsets_table_has_correct_number_of_fields.yaml  TestMessageTextTableBasic.test_mentorship_affiliation_table_has_all_desired_fields.yaml  TestMessageTextTableBasic.test_mentorship_affiliation_table_has_correct_number_of_fields.yaml  TestScheduledMessagesTableBasic.test_mentorship_affiliation_table_has_all_desired_fields.yaml  TestScheduledMessagesTableBasic.test_mentorship_affiliation_table_has_correct_number_of_fields.yaml
(+44 files in other folders)
