[tool.poetry]
name = "operationcode-pybot"
version = "3.0.0"
description = "Operation Code's Official Slackbot"
authors = ["Operation Code <contact@operationcode.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pybot"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9"
python-dotenv = "^1.0"
pyyaml = "^6.0"
sentry-sdk = "^2.0"
zipcodes = "^1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.0"
pytest-aiohttp = "^1.0"
pytest-mock = "^3.12"
black = "^25.0"
ruff = "^0.14"
requests = "^2.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["pybot/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["F401", "E501"]  # Allow re-exports and longer lines for now

[tool.black]
line-length = 100
target-version = ["py312"]
